<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.ardulink</groupId>
	<artifactId>parent</artifactId>
	<version>2.2.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<url>http://www.ardulink.org</url>

	<name>Ardulink Project</name>
	<description>A Java Open Source Project to control and coordinate several Arduino based boards at once</description>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Peter Fichtner</name>
			<organization>Ardulink</organization>
			<organizationUrl>http://www.ardulink.org</organizationUrl>
			<roles>
				<role>developer</role>
				<role>maintainer</role>
				<role>lead</role>
				<role>architect</role>
				<role>release manager</role>
			</roles>
		</developer>
	</developers>

	<contributors>
		<contributor>
			<name>Luciano Zu</name>
			<email>luciano.zu@gmail.com</email>
			<organization>Ardulink</organization>
			<organizationUrl>http://www.ardulink.org</organizationUrl>
			<roles>
				<role>founder</role>
				<role>former developer</role>
			</roles>
		</contributor>
	</contributors>

	<scm>
		<url>https://github.com/Ardulink/Ardulink-2</url>
		<connection>scm:git:git//github.com:Ardulink/Ardulink-2.git</connection>
		<developerConnection>scm:git:git@github.com:Ardulink/Ardulink-2.git</developerConnection>
	</scm>

	<repositories>
		<repository>
			<id>local-repo</id>
			<url>file://${project.basedir}/../local-repo</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<id>central</id>
			<name>Central Repository</name>
			<url>https://repo.maven.apache.org/maven2</url>
		</repository>
	</repositories>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>11</maven.compiler.release>
		<args4j.version>2.37</args4j.version>
		<slf4j.version>2.0.18</slf4j.version>
		<junit.version>5.14.4</junit.version>
		<assertj.version>3.27.7</assertj.version>
		<mockito.version>5.23.0</mockito.version>
		<jqwik.version>1.10.1</jqwik.version>
		<awaitility.version>4.3.0</awaitility.version>
		<junit-pioneer.version>2.3.0</junit-pioneer.version>
		<equalsverifier.version>3.19.4</equalsverifier.version>
		<!-- camel3 is the last version that supports java 11, camel4 needs java 17 -->
		<camel.version>3.22.4</camel.version>

		<!-- default image name for JIB -->
		<image>docker.io/ardulink/${project.artifactId}:${project.version}</image>
	</properties>

	<modules>
		<module>ardulink-core-util</module>
		<module>ardulink-core-base</module>
		<module>ardulink-core-beans</module>
		<module>ardulink-link-virtual</module>
		<module>ardulink-link-nodemcu</module>
		<module>ardulink-link-serial-rxtx</module>
		<module>ardulink-link-serial-jssc</module>
		<module>ardulink-link-serial-jserialcomm</module>
		<module>ardulink-link-bluetooth</module>
		<module>ardulink-link-digispark</module>
		<module>ardulink-link-raspberry</module>
		<module>ardulink-link-proxy</module>
		<module>ardulink-link-mqtt</module>
		<module>ardulink-camel</module>
		<module>ardulink-networkproxyserver</module>
		<module>ardulink-mqtt</module>
		<module>ardulink-swing</module>
		<module>ardulink-console</module>
		<module>ardulink-mail</module>
		<module>ardulink-rest</module>
		<module>ardulink-core-firmata-proto</module>
		<module>deploy-dist</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.15.0</version>
					<configuration>
						<compilerArgs>
							<arg>-Xlint:deprecation</arg>
							<arg>-Xlint:unchecked</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.6</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<descriptors>
							<descriptor>assembly.xml</descriptor>
						</descriptors>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.gaul</groupId>
					<artifactId>modernizer-maven-plugin</artifactId>
					<version>3.4.0</version>
					<configuration>
						<javaVersion>${maven.compiler.release}</javaVersion>
					</configuration>
					<executions>
						<execution>
							<id>modernizer</id>
							<phase>verify</phase>
							<goals>
								<goal>modernizer</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.15</version>
					<executions>
						<execution>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>verify</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/*IntegrationTest.java</exclude>
					</excludes>
					<groups>!in-progress</groups>
					<properties>
						<configurationParameters>
							junit.jupiter.execution.timeout.default = 5m
							# junit.jupiter.execution.parallel.enabled = true
							# junit.jupiter.execution.parallel.mode.default = concurrent
							# junit.jupiter.execution.parallel.mode.classes.default = concurrent
						</configurationParameters>
					</properties>
				</configuration>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>test</goal>
						</goals>
						<phase>integration-test</phase>
						<configuration>
							<excludes>
								<exclude>none</exclude>
							</excludes>
							<includes>
								<include>**/*IntegrationTest.java</include>
							</includes>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.google.cloud.tools</groupId>
				<artifactId>jib-maven-plugin</artifactId>
				<version>3.5.2</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>report-aggregate</id>
						<phase>verify</phase>
						<goals>
							<goal>report-aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>with-video</id>
			<properties>
				<argLine>-Dardulink.test.playwright.video.path=target/videos</argLine>
			</properties>
		</profile>
		<profile>
			<id>makerelease</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.4.0</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>3.12.0</version>
						<configuration>
							<show>public</show>
							<failOnError>false</failOnError>
							<includeDependencySources>false</includeDependencySources>
							<linksource>false</linksource>
							<detectLinks>false</detectLinks>
							<detectOfflineLinks>false</detectOfflineLinks>
							<detectJavaApiLink>false</detectJavaApiLink>
						</configuration>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>signartifacts</id>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>args4j</groupId>
				<artifactId>args4j</artifactId>
				<version>${args4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-jdk14</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>${junit.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-core</artifactId>
				<version>${assertj.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mockito</groupId>
				<artifactId>mockito-core</artifactId>
				<version>${mockito.version}</version>
			</dependency>
			<dependency>
				<groupId>net.jqwik</groupId>
				<artifactId>jqwik</artifactId>
				<version>${jqwik.version}</version>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
			</dependency>
			<dependency>
				<groupId>org.junit-pioneer</groupId>
				<artifactId>junit-pioneer</artifactId>
				<version>${junit-pioneer.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.testcontainers</groupId>
				<artifactId>testcontainers-junit-jupiter</artifactId>
				<version>2.0.5</version>
			</dependency>
			<dependency>
				<groupId>io.github.pfichtner</groupId>
				<artifactId>testcontainers-virtualavr</artifactId>
				<version>0.0.2</version>
			</dependency>
			<dependency>
				<groupId>nl.jqno.equalsverifier</groupId>
				<artifactId>equalsverifier</artifactId>
				<version>${equalsverifier.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
		<repository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

</project>
